FFM debugging fine tuning