@@ -100,14 +100,34 @@ cont
 At the project root:
 ```bash
 ./gradlew clean build
-./gradlew :app:run -Dexec.mainClass=com.github.alextokarew.javadebugging.ffm.FibFFM
 ```
 
 ```
-gcc -g -o0 -shared -fpic -o libfibffm.so -I${JAVA_HOME}/include -I${JAVA_HOME}/include/linux fibffm.cpp
+java -cp build/classes/java/main --enable-native-access=ALL-UNNAMED \
+     -agentlib:jdwp="transport=dt_socket,server=y,suspend=y,address=*:5005" \
+     com.github.alextokarew.javadebugging.ffm.FibFFM
+gdb --pid <dsds>
+jdb -attach 5005
 
-javac -g --enable-preview --release 21 com/github/alextokarew/joker/jvmdebug/FibFFM.java
-java --enable-preview --enable-native-access=ALL-UNNAMED com.github.alextokarew.javadebugging.ffm.FibFFM
+```
 
-java --enable-preview --enable-native-access=ALL-UNNAMED -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005 com.github.alextokarew.javadebugging.ffm.FibFFM
+```gdb
+break fibonacci
+continue
+# -----------------
+break +4
+continue (x3)
+info locals
+set old_result=123
+del
+continue
+```
+
+```jdb
+# -----------------
+stop in com.github.alextokarew.javadebugging.ffm.FibFFM:18
+run
+# -----------------
+locals
+cont
 ```
